# SmartEqualizerPresetsSwitcher

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json
docs/: BUILDING.md  TUI_AND_LINUX.md
scripts/: bootstrap-linux.sh  bootstrap-windows.bat  build-arch-package.sh  build-deb.sh  build-linux.sh  build-windows-from-linux.sh  build-windows.bat  check-project.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autoeq.rs  autorun.rs  commands.rs  lib.rs  linux_eq.rs  main.rs  state.rs  tui.rs
src/lib/: autoeq.ts  store.ts  tauri.ts  types.ts  utils.ts
src/lib/components/: AboutModal.svelte  AutoEqModal.svelte  ConfigEditorModal.svelte  EditorPane.svelte  EqBackendModal.svelte
src/lib/components/layout/: FooterBar.svelte
src/routes/: +page.svelte
